--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/main.css">
-    <title>Document</title>
+    <title>Weather app</title>
 </head>
 <body>
+    <script src="scripts/browser-compatibility-check.js"></script>
+    <script src="scripts/theme-switcher.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 </html>
