--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <title>Weather app</title>
 </head>
 <body>
+    <div id="navrail">
+        <a class="navrail_button">
+            <span class="material-symbols-outlined">home</span>
+            <span>Main</span>
+        </a>
+        <a class="navrail_button">
+            <span class="material-symbols-outlined">history</span>
+            <span>History</span>
+        </a>
+        <a class="navrail_button">
+            <span class="material-symbols-outlined">search</span>
+            <span>Search</span>
+        </a>
+
+
+    </div>
     <script src="scripts/browser-compatibility-check.js"></script>
     <script src="scripts/theme-switcher.js"></script>
     <script src="scripts/main.js"></script>
